--- a/style.css
+++ b/style.css
@@ -767,7 +767,13 @@ body {
     border-bottom: dashed gray;
 }
 #recent-collections-section .collections-background {
-    background-image: url(img/background/food-background.jpg);
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+#recent-collections-section .collections-background > img {
+    position: absolute;
+    width: 100%;
+    height: 750px;
 }
 #recent-collections-section .first-carousel {
     margin-top: 40px;
@@ -801,7 +807,7 @@ body {
 /* ---------------------------FEATURED PRODUCTS SECTION START--------------------------- */
 /* ---------------------------FEATURED PRODUCTS SECTION START--------------------------- */
 #featured-products-section {
-    margin-top: 120px;
+    margin-top: 200px;
 }
 #featured-products-section > h2 {
     font-weight: bold;
@@ -825,7 +831,7 @@ body {
     text-decoration: none;
 }
 #featured-products-section .first-card-featured {
-    margin-top: 120px;
+    margin-top: 90px;
 }
 #featured-products-section .other-card-featured {
     margin-top: 60px;
@@ -1331,6 +1337,57 @@ body {
 /* ---------------------------FAQ SECTION END--------------------------- */
 /* ---------------------------FAQ SECTION END--------------------------- */
 /* ---------------------------FAQ SECTION END--------------------------- */
+
+
+
+
+/* ---------------------------OVERVIEW SECTION START--------------------------- */
+/* ---------------------------OVERVIEW SECTION START--------------------------- */
+/* ---------------------------OVERVIEW SECTION START--------------------------- */
+#overview-section {
+    margin-top: 130px;
+}
+#overview-section .section-title > h2 {
+    font-weight: bold;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.80rem;
+    width: 950px;
+    color: #316131;
+}
+#overview-section .container-titles{
+    border-bottom: dashed gray;
+}
+#overview-section .card > img {
+    height: 250px;
+}
+#overview-section .other-overview {
+    margin-top: 90px;
+}
+#overview-section .first-tag > p {
+    background-color: #F00534;
+    color: white;
+}
+#overview-section .second-tag > p {
+    background-color: red;
+    color: white;
+}
+#overview-section .third-tag > p {
+    background-color: #459122;
+    color: white;
+}
+#overview-section .card-tag > p {
+    width: 90px;
+    margin-top: 10px;
+    font-size: 1.10rem;
+    font-family: 'Work Sans', sans-serif;
+}
+#overview-section .inside-tag {
+    position: absolute;
+    z-index: 1;
+}
+/* ---------------------------OVERVIEW SECTION END--------------------------- */
+/* ---------------------------OVERVIEW SECTION END--------------------------- */
+/* ---------------------------OVERVIEW SECTION END--------------------------- */
 
 
 
