--- a/style.css
+++ b/style.css
@@ -4,6 +4,35 @@
     box-sizing: 0;
     font-family: 'Josefin Sans', sans-serif;
 }
+
+/* THIS ROOTS INDICATES THE SOME COLORS IN THE CUSTOMER REVIEW */
+
+:root {
+    --color-primary: #316131;
+   
+    --color-light-1: #fff;
+    --color-light-2: #eff;
+    --color-light-3: #eee;
+    --color-light-4: #ddd;
+    --color-light-5: #ccc;
+
+    --color-light-gray: silver;
+
+    --color-gray-1: #999;
+    --color-gray-2: gray;
+
+    --color-dark-1: #111;
+    --color-dark-2: #222;
+    --color-dark-3: #333;
+    --color-dark-4: #444;
+    --color-dark-5: #555;
+
+    --purple-dark-1: #211e25;
+    --purple-dark-2: #343236;
+
+    --color-dark-blue: #2e2e3f;
+}
+
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
@@ -1558,6 +1587,178 @@ body {
 /* ---------------------------CUSTOMER REVIEW SECTION START--------------------------- */
 /* ---------------------------CUSTOMER REVIEW SECTION START--------------------------- */
 /* ---------------------------CUSTOMER REVIEW SECTION START--------------------------- */
+.customer-review {
+    height: auto;
+    width: 100%;
+    overflow: hidden;
+    background: -o-linear-gradient(45deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('img/background/about.jpg');
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('img/background/about.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
 
+.customer-review-title p {
+    padding-top: 1.6rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: var(--color-light-1);
+    font-size: 1.4rem;
+    font-weight: bold;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.customer-review-title p span {
+    margin-left: 0.4rem;
+    font-size: 1.2rem;
+}
+
+.customer-review-wrap {
+    display: -ms-grid;
+    display: grid;
+    width: 100%;
+    height: auto;
+    min-height: 560px;
+    place-items: center;
+}
+
+.customer-review-wrap .review-items {
+    padding-top: 2rem;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+}
+
+.review-items .review-content {
+    margin: 1rem 1rem 3rem 0;
+    padding: 1.4rem 1.4rem 3rem 1.4rem;
+    height: auto;
+    width: 630px;
+    border: 1px solid var(--color-light-4);
+    background: var(--color-light-1);
+    border-radius: 0.2rem;
+    -webkit-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+.review-items .review-content.close-review:nth-child(1) {
+    position: absolute;
+    top: 70%;
+    left: 70%;
+    -webkit-transform: translate(-70%, -70%);
+    -ms-transform: translate(-70%, -70%);
+    transform: translate(-70%, -70%);
+}
+
+.review-items .review-content.close-review:nth-child(2) {
+    position: absolute;
+    top: 60%;
+    left: 60%;
+    -webkit-transform: translate(-60%, -60%);
+    -ms-transform: translate(-60%, -60%);
+    transform: translate(-60%, -60%);
+}
+
+.review-items .review-content.close-review:nth-child(3) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.review-items .review-content.close-review:nth-child(4) {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    -webkit-transform: translate(-40%, -40%);
+    -ms-transform: translate(-40%, -40%);
+    transform: translate(-40%, -40%);
+}
+
+.review-items .review-content.close-review:nth-child(5) {
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    -webkit-transform: translate(-30%, -30%);
+    -ms-transform: translate(-30%, -30%);
+    transform: translate(-30%, -30%);
+}
+
+.review-content .customer-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.customer-info .customer-image {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 1px solid var(--color-light-4);
+}
+
+.customer-image img {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    border: 4px solid var(--color-light-1);
+    border-radius: 50%;
+}
+
+.customer-info .customer-details {
+    margin-left: 1rem;
+}
+
+.customer-details .name {
+    color: var(--color-dark-blue);
+    font-size: 1.6rem;
+}
+
+.customer-details .country {
+    color: var(--color-dark-blue);
+    font-size: 1.1rem;
+    padding-top: 0.2rem;
+    font-weight: bold;
+}
+
+.review-content .review-text {
+    margin-top: 1rem;
+    color: var(--color-dark-blue);
+    font-size: 1.1rem;
+}
+
+.review-text span {
+    font-size: 1.4rem;
+}
+
+.review-text span:first-child {
+    margin-left: 1rem;
+    margin-right: 0.4rem;
+}
+
+.review-text span:last-child {
+    margin-left: 0.4rem;
+}
+/* ---------------------------CUSTOMER REVIEW SECTION END--------------------------- */
+/* ---------------------------CUSTOMER REVIEW SECTION END--------------------------- */
+/* ---------------------------CUSTOMER REVIEW SECTION END--------------------------- */
 
 
