--- a/style.css
+++ b/style.css
@@ -873,19 +873,22 @@ body {
     border-style: none;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#featured-products-section .heart-featured {
-    background-color: #61790A;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    margin-top: 12px;
-    margin-left: 15px;
-    border-radius: 15%;
-}
 #featured-products-section .fa-heart {
     color: white;
-    margin-top: 7px;
-    margin-left: 6.50px;
+    margin-top: 5px;
+    margin-left: 5px;
+    background-color: green;
+    padding: 7px;
+    width: 29.80px;
+    position: absolute;
+    margin-top: 12px;
+    margin-left: 13px;
+}
+#featured-products-section .fa-heart:hover, #featured-products-section .fa-heart:focus {
+    cursor: pointer;
+}
+#featured-products-section .fa-heart:active {
+    transform: scale(0.96);
 }
 #featured-products-section .featured-products-off {
     background-image: linear-gradient(to right, #FF4500 , #FF0000);
@@ -1587,7 +1590,10 @@ body {
 /* ---------------------------CUSTOMER REVIEW SECTION START--------------------------- */
 /* ---------------------------CUSTOMER REVIEW SECTION START--------------------------- */
 /* ---------------------------CUSTOMER REVIEW SECTION START--------------------------- */
-.customer-review {
+#customer-review-section {
+    margin-top: 120px;
+}
+#customer-review-section .customer-review {
     height: auto;
     width: 100%;
     overflow: hidden;
@@ -1597,26 +1603,23 @@ body {
     background-position: center;
     background-attachment: fixed;
 }
-
-.customer-review-title p {
+#customer-review-section .customer-review-title p {
     padding-top: 1.6rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    color: var(--color-light-1);
+    color: white;
     font-size: 1.4rem;
     font-weight: bold;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
 }
-
-.customer-review-title p span {
+#customer-review-section .customer-review-title p span {
     margin-left: 0.4rem;
     font-size: 1.2rem;
 }
-
-.customer-review-wrap {
+#customer-review-section .customer-review-wrap {
     display: -ms-grid;
     display: grid;
     width: 100%;
@@ -1624,8 +1627,7 @@ body {
     min-height: 560px;
     place-items: center;
 }
-
-.customer-review-wrap .review-items {
+#customer-review-section .customer-review-wrap .review-items {
     padding-top: 2rem;
     position: relative;
     display: -webkit-box;
@@ -1639,21 +1641,19 @@ body {
     -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
 }
-
-.review-items .review-content {
+#customer-review-section .review-items .review-content {
     margin: 1rem 1rem 3rem 0;
     padding: 1.4rem 1.4rem 3rem 1.4rem;
     height: auto;
     width: 630px;
-    border: 1px solid var(--color-light-4);
-    background: var(--color-light-1);
+    border: 1px solid white;
+    background: white;
     border-radius: 1rem;
     -webkit-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
     transition: all 0.4s ease;
 }
-
-.review-items .review-content.close-review:nth-child(1) {
+#customer-review-section .review-items .review-content.close-review:nth-child(1) {
     position: absolute;
     top: 70%;
     left: 70%;
@@ -1661,8 +1661,7 @@ body {
     -ms-transform: translate(-70%, -70%);
     transform: translate(-70%, -70%);
 }
-
-.review-items .review-content.close-review:nth-child(2) {
+#customer-review-section .review-items .review-content.close-review:nth-child(2) {
     position: absolute;
     top: 60%;
     left: 60%;
@@ -1670,8 +1669,7 @@ body {
     -ms-transform: translate(-60%, -60%);
     transform: translate(-60%, -60%);
 }
-
-.review-items .review-content.close-review:nth-child(3) {
+#customer-review-section .review-items .review-content.close-review:nth-child(3) {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1679,8 +1677,7 @@ body {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
-
-.review-items .review-content.close-review:nth-child(4) {
+#customer-review-section .review-items .review-content.close-review:nth-child(4) {
     position: absolute;
     top: 40%;
     left: 40%;
@@ -1688,8 +1685,7 @@ body {
     -ms-transform: translate(-40%, -40%);
     transform: translate(-40%, -40%);
 }
-
-.review-items .review-content.close-review:nth-child(5) {
+#customer-review-section .review-items .review-content.close-review:nth-child(5) {
     position: absolute;
     top: 30%;
     left: 30%;
@@ -1697,8 +1693,7 @@ body {
     -ms-transform: translate(-30%, -30%);
     transform: translate(-30%, -30%);
 }
-
-.review-content .customer-info {
+#customer-review-section .review-content .customer-info {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1706,60 +1701,53 @@ body {
     -ms-flex-align: center;
     align-items: center;
 }
-
-.customer-info .customer-image {
+#customer-review-section .customer-info .customer-image {
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    border: 1px solid var(--color-light-4);
+    border: 1px solid white;
 }
-
-.customer-image img {
+#customer-review-section .customer-image img {
     height: 100%;
     width: 100%;
     -o-object-fit: cover;
     object-fit: cover;
-    border: 4px solid var(--color-light-1);
+    border: 4px solid white;
     border-radius: 50%;
 }
-
-.customer-info .customer-details {
+#customer-review-section .customer-info .customer-details {
     margin-left: 1rem;
 }
-
-.customer-details .name {
-    color: var(--color-dark-blue);
+#customer-review-section .customer-details .name {
+    color: #2E2E3F;
     font-size: 1.6rem;
 }
-
-.customer-details .country {
-    color: var(--color-dark-blue);
+#customer-review-section .customer-details .country {
+    color: #2E2E3F;
     font-size: 1.1rem;
     padding-top: 0.2rem;
     font-weight: bold;
 }
-
-.review-content .review-text {
+#customer-review-section .review-content .review-text {
     margin-top: 1rem;
-    color: var(--color-dark-blue);
+    color: #2E2E3F;
     font-size: 1.1rem;
 }
-
-.review-text span {
+#customer-review-section .review-text span {
     font-size: 1.4rem;
 }
-
-.review-text span:first-child {
+#customer-review-section .review-text span:first-child {
     margin-left: 1rem;
     margin-right: 0.4rem;
 }
-
-.review-text span:last-child {
+#customer-review-section .review-text span:last-child {
     margin-left: 0.4rem;
 }
 /* ---------------------------CUSTOMER REVIEW SECTION END--------------------------- */
 /* ---------------------------CUSTOMER REVIEW SECTION END--------------------------- */
 /* ---------------------------CUSTOMER REVIEW SECTION END--------------------------- */
+
+
 
 
 /* ---------------------------CALL TO ACTION START--------------------------- */
