--- a/style.css
+++ b/style.css
@@ -614,6 +614,9 @@ body {
     font-weight: bold;
     font-family: 'Work Sans', sans-serif;
 }
+#services-section .service-cards {
+    margin-top: 40px;
+}
 /* ---------------------------SERVICES SECTION END--------------------------- */
 /* ---------------------------SERVICES SECTION END--------------------------- */
 /* ---------------------------SERVICES SECTION END--------------------------- */
